Bug 306214 - QCompas ICS JNI error
Summary: QCompas ICS JNI error
Status: RESOLVED FIXED
Alias: None
Product: Necessitas
Classification: Unmaintained
Component: Android Qt4 Mobility (other bugs)
Version First Reported In: alpha4
Platform: Android Android 4.x
: HI crash
Target Milestone: Unspecified
Assignee: BogDan Vatra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-03 19:06 UTC by Wolfgang
Modified: 2012-09-20 18:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang 2012-09-03 19:06:24 UTC
In the moment of stopping a QtMobility QCompas Sensor  ((e.g. when finishig app)
an error:

E/dalvikvm( 9556): JNI ERROR (app bug): accessed stale local reference
0x1d200001 (index 0 in a table of size 0)
E/dalvikvm( 9556): VM aborting
F/libc    ( 9556): Fatal signal 11 (SIGSEGV) at 0xdeadd00d (code=1)

occurs, app hangs for about 30 seconds and then crashes.

It seems, this happens only on Adroid-4 peripherals

Is there already a solution for this problem ??

Thanks , Wolfgang


Reproducible: Always

Steps to Reproduce:
1. create QCompas
2. start QCompas
3. stop QCompas
Actual Results:  
E/dalvikvm( 9556): JNI ERROR (app bug): accessed stale local reference

Expected Results:  
no error, immediate stop

SDK alpha 4 (OpenSuse)
android 4.0.3 on Samsung S2
Comment 1 BogDan Vatra 2012-09-03 19:11:52 UTC
A sample application which we can use to reproduce this issue will be very appreciated.
Comment 2 Wolfgang 2012-09-03 19:28:35 UTC
Hi BogDan
Thanks for the response
You can test it with wit the Qt sample program without changes.
http://www.developer.nokia.com/Community/Wiki/How_to_use_QCompass_sensor

I hope this helps
Thanks Wolfgang
Comment 3 BogDan Vatra 2012-09-13 17:23:54 UTC
Git commit 28ac2111bc4cde18aa27d3899729df74f77579ee by BogDan Vatra.
Committed on 13/09/2012 at 19:23.
Pushed by vatra into branch 'unstable'.

Fix sensors crash on Android 4.x

M  +8    -11   plugins/sensors/android/sensorjni.cpp

http://commits.kde.org/android-qt-mobility/28ac2111bc4cde18aa27d3899729df74f77579ee
Comment 4 Wolfgang 2012-09-20 18:44:07 UTC
It' working excellently :-)
Thank you, BogDan, for your great Job.

Wolfgang