Fix sensors crash on Android 4.x

BUG: 306214